--- a/backlinks.html
+++ b/backlinks.html
@@ -1,2 +1,22 @@
-<h2>Analyse des Backlinks</h2>
-<p>Cette page analysera les liens pointant vers ton site.</p>
+ <!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Backlinks – LilBoost SEO</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>🔗 Vérification des Backlinks</h1>
+  <nav>
+    <a href="index.html">Accueil</a> |
+    <a href="analyse.html">Analyse Mots-Clés</a> |
+    <a href="suivi.html">Suivi Hebdo</a> |
+    <a href="backlinks.html">Backlinks</a>
+  </nav>
+
+  <section>
+    <p>Cette section affichera bientôt tes backlinks grâce à une API externe.</p>
+  </section>
+</body>
+</html>
+
