--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
@@ -13,6 +13,12 @@
     <a href="suivi.html">Suivi Hebdo</a> |
     <a href="backlinks.html">Backlinks</a>
   </nav>
-  <p>Bienvenue sur ton outil SEO personnel LilBoost 💡</p>
+
+  <section>
+    <h2>Bienvenue sur LilBoost SEO</h2>
+    <p>Outil de suivi et d’analyse SEO fait maison 💡.</p>
+    <p>Choisis une section ci-dessus pour commencer.</p>
+  </section>
 </body>
 </html>
+
